# GoF-Design-Patterns

.github/workflows/: build.yml
Creational/Singleton/: CMakeLists.txt  Singleton.h  singleton.cpp
Creational/Singleton/scripts/: build_and_test.sh
tests/: test_singleton.cpp
